--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "format-num",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Format numbers.",
   "main": "index.js",
   "files": [
-    "index.js"
+    "index.js",
+    "index.d.ts"
   ],
   "scripts": {
     "lint": "standard",
